--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -41,7 +41,7 @@
             <p><strong>Trainer:</strong> <b>Mr. Balaji Reddy L.</b><br />
                 <strong>Contact:</strong> <b>+91-9900012028,+91-8296242028,+91-7218683207</b><br />
                 <strong>Server IP:</strong> <span th:text="${serverIp}"></span><br />
-                <strong>Client </strong> <span th:text="${clientIp}"></span>
+                <strong>Client IPAdd: </strong> <span th:text="${clientIp}"></span>
             </p>
         </div>
     </div>
