--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -38,7 +38,7 @@
             <img th:src="@{/images/trainer.jpg}" alt="Trainer Photo" class="trainer-img" />
         </div>
         <div class="trainer-info">
-            <p><strong>Trainer:</strong> <b>Mr. Balaji Reddy Lacchanagari.</b><br />
+            <p><strong>Trainer:</strong> <b>Mr. Balaji Reddy Lacchanagari</b><br />
                 <strong>Contact:</strong> <b>+91-9900012028,+91-8296242028,+91-7218683207</b><br />
                 <strong>Server IP:</strong> <span th:text="${serverIp}"></span><br />
                 <strong>Client IPAdd :</strong> <span th:text="${clientIp}"></span>
